# planetary-destruction-simulator

./: .gitignore  Cargo.toml  README.md
data/cfg/: default.yaml
src/: handle_events.rs  init.rs  main.rs  prelude.rs
src/game/: mod.rs  settings.rs
src/game/simulation/: mod.rs  ocl_liquid_sim.rs  ocl_util.rs  settings.rs  torus.rs  unit_cube.rs
src/game/simulation/cl/: liquid_sim.cl
src/game/simulation/geometry/: mod.rs  scalar_field.rs  sphere.rs  torus.rs
src/shader/: illuminate.140.frag  mod.rs  project.140.vert  triplanar.140.frag
src/util/: camera.rs  mod.rs
