[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
name = "ds-sim"
version = "0.1.0"

[dependencies]
cgmath = "^0.16"
config = "^0.8"
env_logger = "^0.5"
genmesh = "^0.5"
glium = "^0.20"
glutin = "^0.12"
image = "0.18.0"
lazy_static = "^1.0"
log = "^0.4"
ndarray = "0.11.2"
ocl = "^0.18"
rand = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.7"

[dependencies.isosurface]
path = "../isosurface"

[dependencies.obj]
features = ["genmesh"]
version = "^0.8"
